
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int time_t ;
struct timespec {int tv_sec; int tv_nsec; } ;
struct clocktime {int year; int mon; int day; int hour; int min; int sec; int nsec; int dow; } ;


 int POSIX_BASE_YEAR ;
 int SECDAY ;
 int day_of_week (int) ;
 int days_in_month (int,int) ;
 int days_in_year (int) ;

__attribute__((used)) static void
clock_ts_to_ct(struct timespec *ts, struct clocktime *ct)
{
 int i, year, days;
 time_t rsec;
 time_t secs;

 secs = ts->tv_sec;
 days = (int) (secs / SECDAY);
 rsec = secs % SECDAY;

 ct->dow = day_of_week(days);


 for (year = POSIX_BASE_YEAR; days >= days_in_year(year); year++)
  days -= days_in_year(year);
 ct->year = year;


 for (i = 1; days >= days_in_month(year, i); i++)
  days -= days_in_month(year, i);
 ct->mon = i;


 ct->day = days + 1;


 ct->hour = (int) (rsec / 3600);
 rsec = rsec % 3600;
 ct->min = (int) (rsec / 60);
 rsec = rsec % 60;
 ct->sec = (int) rsec;
 ct->nsec = ts->tv_nsec;
}
